--- a/public/index.html
+++ b/public/index.html
@@ -7,6 +7,11 @@
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
     <link rel="stylesheet" href="vendors/bulma.min.css">
     <script src="vendors/fontawesome.js"></script>
+    <script src="vendors/lodash.js"></script>
+    <script src="data/metadata.js"></script>
+    <script src="data/video-summary.js"></script>
+    <script src="data/video-detail.js"></script>
+    <script src="js/app.js"></script>
     <title>mycube</title>
   </head>
   <body>
