Add video albums layout sample.

--- a/public/index.html
+++ b/public/index.html
@@ -11,6 +11,7 @@
     <script src="data/metadata.js"></script>
     <script src="data/video-summary.js"></script>
     <script src="data/video-detail.js"></script>
+    <script src="data/video-episode.js"></script>
     <script src="js/app.js"></script>
     <title>mycube</title>
   </head>
